# api-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  dev.sh  docker-compose.yml  run_migrations_internal.sh  run_migrations_on_docker.sh
.github/workflows/: rust.yml
config/: config.rs  project.toml  project_config.rs  schema.sql
config/migrations/20250724070931-create_table_users_movies_access_group_and_users_on_access_groups/: README.md
docs/: PIPELINE_README.md  STRUCTURE.md
migrations/: migrate.sh
migrations/20250724070931-create_table_users_movies_access_group_and_users_on_access_groups/: migration.sql
scripts/: Makefile  pipeline.ps1  pipeline.sh
src/: config.rs  errors.rs  lib.rs  main.rs
src/apps/:  Cargo.toml  Cargo.toml  mod.rs
src/apps/admin_api/: Cargo.toml
src/apps/admin_api/src/: lib.rs  main.rs  routes.rs
src/apps/admin_api/src/controllers/: content_controller.rs  mod.rs  video_controller.rs
src/apps/admin_api/src/dto/: mod.rs  video_dto.rs
src/apps/admin_api/src/models/: video.rs
src/apps/admin_api/src/services/: content_service.rs  mod.rs  video_service.rs
src/apps/auth_api/: Cargo.toml
src/apps/auth_api/src/: lib.rs  main.rs  routes.rs
src/apps/auth_api/src/controllers/: auth_controller.rs  create_user_controller.rs  find_user_by_id_controller.rs  find_users_controller.rs  mod.rs  user_controller.rs
src/apps/auth_api/src/dto/: auth_dto.rs  mod.rs  user_dto.rs
src/apps/auth_api/src/models/: user.rs
src/apps/auth_api/src/services/: auth_service.rs  create_user_service.rs  find_user_by_id_service.rs  find_users_service.rs  mod.rs  user_service.rs
src/apps/viewer_api/: Cargo.toml
src/apps/viewer_api/src/: lib.rs  main.rs  routes.rs
src/apps/viewer_api/src/controllers/: catalog_controller.rs  mod.rs
src/apps/viewer_api/src/dto/: catalog_dto.rs  mod.rs
src/apps/viewer_api/src/models/: video.rs
src/apps/viewer_api/src/services/: catalog_service.rs
src/infrastructure/: db.rs  mod.rs  redis.rs
src/libs/modules/: auth.rs  mod.rs
src/libs/shared/: mod.rs
src/libs/shared/cache/: mod.rs
src/libs/shared/database/: mod.rs
src/libs/shared/database/repositories/: videos.rs
src/libs/shared/logging/: mod.rs
src/libs/shared/modules/: auth.rs  jwt.rs
