[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-extra = "0.6"
tokio = { version = "1.22.0", features = ["full"] }
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "macros", "sqlx-sqlite"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.140"
hyper = "1.6.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
tower-service = "0.3.3"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "sql-browser-tokio"] }
tokio-util = "0.7"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = "2.8"
futures = "0.3"
dotenv = "0.15"
dotenvy = "0.15"
itertools = "0.14.0"
rayon = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }
jsonwebtoken = "9.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
tower-http-auth = "0.1"

# APIs individuais
auth_api = { path = "src/apps/auth_api" }
admin_api = { path = "src/apps/admin_api" }
viewer_api = { path = "src/apps/viewer_api" }

