[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8.4"
axum-extra = "0.6"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Database
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "macros"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono", "sql-browser-tokio"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.140"
bson = "2.8"

# HTTP
hyper = "1.6.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
itertools = "0.14.0"
rayon = "1.10.0"

# APIs individuais
auth_api = { path = "src/apps/auth_api" }
admin_api = { path = "src/apps/admin_api" }
viewer_api = { path = "src/apps/viewer_api" }

