[workspace]
members = [
    "auth_api",
    "admin_api", 
    "viewer_api",
]

[workspace.dependencies]
axum = "0.8.4"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.22.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
redis = "0.24"
